# mappero

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: buid.yml  format_clean.yml
install/: common_utils.sh  install_cmake.sh  install_colmap.sh  install_glomap.sh  install_openmvg.sh
mappero/config/: colmap.yaml  glomap.yaml
mappero/modules/: colmap.py  glomap.py
mappero/utils/: config.py  io.py  process.py
mappero/utils/colmap/: colmap_nvm.py  database.py  read_write_model.py
mappero/visualization/: gui.py  vis3d.py
scripts/: gui.sh  run_colmap.sh  run_glomap.sh  vis.sh
